# plum

./: .gitignore  Cargo.toml  build.ps1  build.rs  readme.md  run.ps1  x86_64-unknown-plum.json
.cargo/: config.toml
assets/: logo.kra  logo.kra-autosave.kra  logo.kra~  logo.qoi
kernel/: Cargo.toml
kernel/src/: macros.rs  main.rs  syscalls.rs
kernel/src/cpu/: gdt.rs  mod.rs
kernel/src/crypto/: mod.rs  plumhash.rs  sha256.rs
kernel/src/drivers/: keyboard.rs  mod.rs  sata.rs
kernel/src/drivers/disk/: mod.rs
kernel/src/drivers/fs/: fat.rs  vfs.rs
kernel/src/drivers/graphics/: bmp.rs  framebuffer.rs  mod.rs  psf.rs  qoi.rs  vga.rs
kernel/src/drivers/serial/: mod.rs
kernel/src/interrupts/: mod.rs  pic.rs  syscall.rs  timer.rs
kernel/src/memory/: allocator.rs  frame_allocator.rs  mod.rs  paging.rs
kernel/src/multitasking/: context.rs  mod.rs  process.rs  process_manager.rs  scheduler.rs
kernel/src/shell/: mod.rs
kernel/src/shell/commands/: lsblk.rs  mod.rs
kernel/src/terminal/: framebuffer_terminal.rs  mod.rs
kernel/src/users/: login.rs  mod.rs
kernel/src/utils/: colors.rs  mod.rs
rootfs/: README.md
rootfs/etc/: issue  passwd
scripts/: make-rootfs.sh
src/: main.rs
src/drivers/serial/: mod.rs
src/utils/: colors.rs
userland/: Cargo.toml
userland/src/: main.rs
userland/src/applets/: cat.rs  echo.rs  help.rs  ls.rs  mkdir.rs  mod.rs  pwd.rs  rm.rs  sleep.rs  touch.rs  truth.rs
