[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[dependencies]
bootloader_api = "0.11"
spin = "0.9"
x86_64 = "0.15.4"
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
